Describe possible future works

--- a/report/references.bib
+++ b/report/references.bib
@@ -61,3 +61,25 @@
   pages     = {6379--6390},
   year      = {2017}
 }
+
+@article{schaul:15,
+  author  = {Schaul, Tom and Quan, John and Antonoglou, Ioannis and Silver, David},
+  title   = {Prioritized experience replay},
+  journal = {arXiv preprint},
+  year    = {2015}
+}
+
+@inproceedings{andrychowicz:17,
+  author    = {Andrychowicz, Marcin and Wolski, Filip and Ray, Alex and Schneider, Jonas and Fong, Rachel and Welinder, Peter and McGrew, Bob and Tobin, Josh and Abbeel, OpenAI Pieter and Zaremba, Wojciech},
+  title     = {Hindsight experience replay},
+  booktitle = {Advances in neural information processing systems},
+  pages     = {5048--5058},
+  year      = {2017}
+}
+
+@inproceedings{hafner:20,
+  author    = {Danijar Hafner and Timothy Lillicrap and Jimmy Ba and Mohammad Norouzi},
+  title     = {Dream to Control: Learning Behaviors by Latent Imagination},
+  booktitle = {International Conference on Learning Representations},
+  year      = {2020},
+}
