Remove the code that install the libraries

--- a/Tennis.ipynb
+++ b/Tennis.ipynb
@@ -102,23 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 2 agents. Each observes a state with length: 24\n",
+      "There are 2 agents. Each observation is a state with length: 24\n",
       "The state for the first agent looks like: [ 0.          0.          0.          0.          0.          0.          0.\n",
       "  0.          0.          0.          0.          0.          0.          0.\n",
-      "  0.          0.         -7.38993645 -1.5        -0.          0.\n",
-      "  6.83172083  5.99607611 -0.          0.        ]\n"
+      "  0.          0.         -6.69487906 -1.5        -0.          0.\n",
+      "  6.83172083  5.98822832 -0.          0.        ]\n"
      ]
     }
    ],
    "source": [
-    "print('There are {} agents. Each observes a state with length: {}'.format(env.num_agents, env.state_size))\n",
+    "print('There are {} agents. Each observation is a state with length: {}'.format(env.num_agents, env.state_size))\n",
     "print('The state for the first agent looks like:', env.reset(train_mode=True)[0])"
    ]
   },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,19 +160,15 @@
     "        scores_window_mean.append(np.mean(scores_window))\n",
     "        scores_window_std.append(np.std(scores_window))\n",
     "        \n",
-    "        print('\\rEpisode {}\\tAverage Score: {:.3f}\\tstd: {:.3f}\\tScore: {:.3f}'.format(episode, \n",
-    "                                                                                       scores_window_mean[-1], \n",
-    "                                                                                       scores_window_std[-1], \n",
-    "                                                                                       scores[-1]), \n",
-    "              end=\"\")\n",
+    "        print('\\rEpisode {}\\tAverage Score: {:.3f}\\tstd: {:.3f}\\tScore: {:.3f}'.\n",
+    "              format(episode, scores_window_mean[-1], scores_window_std[-1], scores[-1]), end=\"\")\n",
     "        \n",
     "        if episode % 100 == 0:\n",
-    "            print('\\rEpisode {}\\tAverage Score: {:.3f}\\tstd: {:.3f}\\tScore: {:.3f}'.format(episode, \n",
-    "                                                                                           scores_window_mean[-1], \n",
-    "                                                                                           scores_window_std[-1], \n",
-    "                                                                                           scores[-1])) \n",
+    "            print('\\rEpisode {}\\tAverage Score: {:.3f}\\tstd: {:.3f}\\tScore: {:.3f}'.\n",
+    "                  format(episode, scores_window_mean[-1], scores_window_std[-1], scores[-1])) \n",
     "        if scores_window_mean[-1] > 0.5:\n",
-    "            print('\\nEnvironment solved in {:d} episodes!\\tScore: {:.3f}'.format(episode, scores_window_mean[-1]))\n",
+    "            print('\\nEnvironment solved in {:d} episodes!\\tScore: {:.3f}'.\n",
+    "                  format(episode, scores_window_mean[-1]))\n",
     "            \n",
     "            filename = \"checkpoints/{}_checkpoint_{}_{}.pth\"\n",
     "\n",
@@ -193,15 +189,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'buffer_size': 100000, 'batch_size': 200, 'lr_actor': 0.0001, 'lr_critic': 0.001, 'gamma': 0.99, 'weight_decay': 0, 'tau': 0.001, 'update_frequency': 2, 'n_learns': 1}\n"
+     ]
+    }
+   ],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../\")\n",
+    "configurationParameters = {\"buffer_size\":int(1e5), \"batch_size\":200,  \n",
+    "                           \"lr_actor\":1e-4, \"lr_critic\":1e-3,\n",
+    "                           \"gamma\":0.99, \"weight_decay\":0, \n",
+    "                           \"tau\":1e-3, \"update_frequency\":2, \n",
+    "                           \"n_learns\":1}\n",
+    "\n",
+    "print(configurationParameters)\n",
     "\n",
     "from ddpg.multiagent import MultiAgent\n",
-    "agent = MultiAgent(env.num_agents, env.state_size, env.action_size, buffer_size=int(1e5), seed=0, update_frequency=2)"
+    "agent = MultiAgent(env.num_agents, env.state_size, env.action_size, seed=0, \n",
+    "                   hyperparameters=configurationParameters)"
    ]
   },
   {
@@ -213,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -266,54 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Episode 100\tAverage Score: 0.003\tstd: 0.017\tScore: 0.000\n",
-      "Episode 200\tAverage Score: 0.010\tstd: 0.030\tScore: 0.000\n",
-      "Episode 300\tAverage Score: 0.000\tstd: 0.000\tScore: 0.000\n",
-      "Episode 400\tAverage Score: 0.000\tstd: 0.000\tScore: 0.000\n",
-      "Episode 500\tAverage Score: 0.000\tstd: 0.000\tScore: 0.000\n",
-      "Episode 600\tAverage Score: 0.008\tstd: 0.027\tScore: 0.000\n",
-      "Episode 700\tAverage Score: 0.018\tstd: 0.038\tScore: 0.000\n",
-      "Episode 800\tAverage Score: 0.012\tstd: 0.032\tScore: 0.000\n",
-      "Episode 900\tAverage Score: 0.009\tstd: 0.027\tScore: 0.000\n",
-      "Episode 1000\tAverage Score: 0.000\tstd: 0.000\tScore: 0.000\n",
-      "Episode 1100\tAverage Score: 0.003\tstd: 0.016\tScore: 0.000\n",
-      "Episode 1200\tAverage Score: 0.017\tstd: 0.037\tScore: 0.100\n",
-      "Episode 1300\tAverage Score: 0.015\tstd: 0.038\tScore: 0.000\n",
-      "Episode 1400\tAverage Score: 0.038\tstd: 0.051\tScore: 0.000\n",
-      "Episode 1500\tAverage Score: 0.062\tstd: 0.062\tScore: 0.000\n",
-      "Episode 1600\tAverage Score: 0.057\tstd: 0.059\tScore: 0.000\n",
-      "Episode 1700\tAverage Score: 0.078\tstd: 0.058\tScore: 0.100\n",
-      "Episode 1800\tAverage Score: 0.092\tstd: 0.054\tScore: 0.000\n",
-      "Episode 1900\tAverage Score: 0.119\tstd: 0.089\tScore: 0.100\n",
-      "Episode 2000\tAverage Score: 0.130\tstd: 0.122\tScore: 0.100\n",
-      "Episode 2100\tAverage Score: 0.144\tstd: 0.110\tScore: 0.200\n",
-      "Episode 2200\tAverage Score: 0.141\tstd: 0.107\tScore: 0.200\n",
-      "Episode 2300\tAverage Score: 0.153\tstd: 0.108\tScore: 0.100\n",
-      "Episode 2400\tAverage Score: 0.230\tstd: 0.354\tScore: 0.090\n",
-      "Episode 2500\tAverage Score: 0.203\tstd: 0.232\tScore: 0.100\n",
-      "Episode 2600\tAverage Score: 0.207\tstd: 0.208\tScore: 0.190\n",
-      "Episode 2700\tAverage Score: 0.188\tstd: 0.189\tScore: 0.200\n",
-      "Episode 2800\tAverage Score: 0.198\tstd: 0.178\tScore: 0.090\n",
-      "Episode 2900\tAverage Score: 0.179\tstd: 0.203\tScore: 0.190\n",
-      "Episode 3000\tAverage Score: 0.184\tstd: 0.231\tScore: 0.090\n",
-      "Episode 3100\tAverage Score: 0.159\tstd: 0.205\tScore: 0.100\n",
-      "Episode 3200\tAverage Score: 0.289\tstd: 0.387\tScore: 0.890\n",
-      "Episode 3300\tAverage Score: 0.318\tstd: 0.351\tScore: 0.100\n",
-      "Episode 3400\tAverage Score: 0.326\tstd: 0.384\tScore: 0.400\n",
-      "Episode 3500\tAverage Score: 0.335\tstd: 0.312\tScore: 0.200\n",
-      "Episode 3600\tAverage Score: 0.454\tstd: 0.453\tScore: 0.300\n",
-      "Episode 3629\tAverage Score: 0.504\tstd: 0.496\tScore: 1.500\n",
-      "Environment solved in 3629 episodes!\tScore: 0.496\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "scores, scores_window_mean, scores_window_std = maddpg(agent)"
    ]
@@ -461,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
